deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lummo-service
spec:
  selector:
    app: lummo
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
